tests/errors/validation/namespace-inside-type.fn
---
Description: Namespace declared inside a type
Expected: compile error
---

type BadType
{
    namespace Oops
    {
    }
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
